# Data-Snipper-home-task

./: .gitignore  FinerDistilBert_CS_Console_App.exe.lnk  README.md  README.md.txt  main.py  pyproject.toml
FinerDistilBert_CS_Console_App/: ClassNames.cs  FinerDistilBert_CS_Console_App.csproj  FinerDistilBert_CS_Console_App.sln  FinerDistilBert_Model.cs  FinerDistilBert_ModelInput.cs  Program.cs  ProjectUtils.cs
VSTO_AddIn/: FinerDistilBert_VSTO.csproj  FinerDistilBert_VSTO.sln  FinerDistilBert_VSTO_TemporaryKey.pfx  ThisAddIn.Designer.cs  ThisAddIn.Designer.xml  ThisAddIn.cs  packages.config
VSTO_AddIn/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
utils/: __init__.py  logging.py
